@@ -27,56 +27,69 @@ public final class ShapeRegistry {
         Objects.requireNonNull(shape.getId(), "Shape ID must not be null");
 
         Identifier id = shape.getId();
-        if (!SHAPES.containsKey(id)) {
-            SHAPE_ORDER.add(id);
-        } else {
-            OneKeyMiner.LOGGER.warn("Shape {} was registered more than once; replacing previous instance", id);
+        synchronized (SHAPE_ORDER) {
+            ChainShape previous = SHAPES.put(id, shape);
+            if (previous == null) {
+                SHAPE_ORDER.add(id);
+            } else {
+                OneKeyMiner.LOGGER.warn("Shape {} was registered more than once; replacing previous instance", id);
+            }
         }
-        SHAPES.put(id, shape);
     }
 
     public static ChainShape getShape(Identifier id) {
-        return SHAPES.get(id);
+        return id != null ? SHAPES.get(id) : null;
     }
 
     public static ChainShape getShapeOrDefault(Identifier id) {
-        ChainShape shape = SHAPES.get(id);
+        ChainShape shape = id != null ? SHAPES.get(id) : null;
         if (shape == null) {
             shape = SHAPES.get(DEFAULT_SHAPE_ID);
         }
-        if (shape == null && !SHAPES.isEmpty()) {
-            shape = SHAPES.values().iterator().next();
+        if (shape == null) {
+            synchronized (SHAPE_ORDER) {
+                for (Identifier registeredId : SHAPE_ORDER) {
+                    shape = SHAPES.get(registeredId);
+                    if (shape != null) {
+                        break;
+                    }
+                }
+            }
         }
         return shape;
     }
 
     public static ChainShape getShapeOrDefault(String idStr) {
-        Identifier id = Identifier.tryParse(idStr);
+        Identifier id = idStr == null ? null : Identifier.tryParse(idStr);
         return getShapeOrDefault(id != null ? id : DEFAULT_SHAPE_ID);
     }
 
     public static boolean isRegistered(Identifier id) {
-        return SHAPES.containsKey(id);
+        return id != null && SHAPES.containsKey(id);
     }
 
     public static boolean isValidShapeId(String idStr) {
-        Identifier id = Identifier.tryParse(idStr);
+        Identifier id = idStr == null ? null : Identifier.tryParse(idStr);
         return id != null && SHAPES.containsKey(id);
     }
 
     public static List<ChainShape> getAllShapes() {
         List<ChainShape> result = new ArrayList<>();
-        for (Identifier id : SHAPE_ORDER) {
-            ChainShape shape = SHAPES.get(id);
-            if (shape != null) {
-                result.add(shape);
+        synchronized (SHAPE_ORDER) {
+            for (Identifier id : SHAPE_ORDER) {
+                ChainShape shape = SHAPES.get(id);
+                if (shape != null) {
+                    result.add(shape);
+                }
             }
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     public static List<Identifier> getAllShapeIds() {
-        return Collections.unmodifiableList(new ArrayList<>(SHAPE_ORDER));
+        synchronized (SHAPE_ORDER) {
+            return List.copyOf(SHAPE_ORDER);
+        }
     }
 
     public static int getShapeCount() {
